--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth-test",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "auth-test",
   "engines": {
     "node": "14.*"
@@ -11,10 +11,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -24,13 +22,11 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
-    "pdfkit": "^0.13.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "rand-token": "^1.0.1",
     "sequelize": "^6.16.1",
-    "uuid": "^8.3.2",
-    "valid-url": "^1.0.9"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
